@@ -9,6 +9,8 @@ import net.dv8tion.jda.api.hooks.ListenerAdapter;
 import java.io.BufferedWriter;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -26,8 +28,8 @@ public class MessageListener extends ListenerAdapter {
 
     static {
         try {
-            String[] urlReplacements = new String((MessageListener.class.getClassLoader().getResourceAsStream("UrlReplacements.txt")).readAllBytes()).split("\n");
-            urlReplacements[0] = urlReplacements[0].substring(0, urlReplacements[0].length() - 1);
+            String[] urlReplacements = new String(Files.readAllBytes(Path.of("UrlReplacements.txt"))).split("\n");
+            // urlReplacements[0] = urlReplacements[0].substring(0, urlReplacements[0].length() - 1);
             for (String s : urlReplacements) {
                 domains.put(s.substring(0, s.indexOf("|")),
                         s.substring(s.indexOf("|") + 1).strip());
@@ -70,7 +72,7 @@ public class MessageListener extends ListenerAdapter {
     }
 
     public static boolean saveUrlReplacements() {
-        String filePath = "src/main/resources/UrlReplacements.txt";
+        String filePath = "UrlReplacements.txt";
 
         try (BufferedWriter writer = new BufferedWriter(new FileWriter(filePath))) {
             for (String domain : domains.keySet()) {
